@@ -1,13 +1,12 @@
 package net.redhogs.cronparser;
 
+import java.util.Locale;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Locale;
-
 public class CronExpressionDescriptorESTest {
 
-    private static final Locale SPANISH = new Locale("es");
+    private static final Locale SPANISH = Locale.of("es");
 
     @Test
     public void testEverySecond() throws Exception {
@@ -21,7 +20,7 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testMinuteSpan() throws Exception {
-        Assert.assertEquals("Cada minuto entre 11:00 AM y 11:10 AM", CronExpressionDescriptor.getDescription("0-10 11 * * *", SPANISH));
+        Assert.assertEquals("Cada minuto entre 11:00 a. m. y 11:10 a. m.", CronExpressionDescriptor.getDescription("0-10 11 * * *", SPANISH));
     }
 
     @Test
@@ -46,13 +45,13 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testDailyAtTime() throws Exception {
-        Assert.assertEquals("En 11:30 AM", CronExpressionDescriptor.getDescription("30 11 * * *", SPANISH));
+        Assert.assertEquals("En 11:30 a. m.", CronExpressionDescriptor.getDescription("30 11 * * *", SPANISH));
     }
 
     @Test
     public void testTimeOfDayCertainDaysOfWeek() throws Exception {
-        Assert.assertEquals("En 11:00 PM, lunes hasta viernes", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", SPANISH));
-        Assert.assertEquals("En 11:30 AM, lunes hasta viernes", CronExpressionDescriptor.getDescription("30 11 * * 1-5", SPANISH));
+        Assert.assertEquals("En 11:00 p. m., lunes hasta viernes", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", SPANISH));
+        Assert.assertEquals("En 11:30 a. m., lunes hasta viernes", CronExpressionDescriptor.getDescription("30 11 * * 1-5", SPANISH));
     }
 
     @Test
@@ -67,91 +66,91 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testTwoTimesEachAfternoon() throws Exception {
-        Assert.assertEquals("En 2:30 PM y 4:30 PM", CronExpressionDescriptor.getDescription("30 14,16 * * *", SPANISH));
+        Assert.assertEquals("En 2:30 p. m. y 4:30 p. m.", CronExpressionDescriptor.getDescription("30 14,16 * * *", SPANISH));
     }
 
     @Test
     public void testThreeTimesDaily() throws Exception {
-        Assert.assertEquals("En 6:30 AM, 2:30 PM y 4:30 PM", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", SPANISH));
+        Assert.assertEquals("En 6:30 a. m., 2:30 p. m. y 4:30 p. m.", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", SPANISH));
     }
 
     @Test
     public void testOnceAWeek() throws Exception {
-        Assert.assertEquals("En 9:46 AM, sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 0", SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 7", SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en lunes", CronExpressionDescriptor.getDescription("46 9 * * 1", SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en sábado", CronExpressionDescriptor.getDescription("46 9 * * 6", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 0", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 7", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en lunes", CronExpressionDescriptor.getDescription("46 9 * * 1", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en sábado", CronExpressionDescriptor.getDescription("46 9 * * 6", SPANISH));
     }
 
     @Test
     public void testOnceAWeekNonZeroBased() throws Exception {
         Options options = new Options();
         options.setZeroBasedDayOfWeek(false);
-        Assert.assertEquals("En 9:46 AM, sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 1", options, SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en lunes", CronExpressionDescriptor.getDescription("46 9 * * 2", options, SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en sábado", CronExpressionDescriptor.getDescription("46 9 * * 7", options, SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en domingo", CronExpressionDescriptor.getDescription("46 9 * * 1", options, SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en lunes", CronExpressionDescriptor.getDescription("46 9 * * 2", options, SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en sábado", CronExpressionDescriptor.getDescription("46 9 * * 7", options, SPANISH));
     }
 
     @Test
     public void testTwiceAWeek() throws Exception {
-        Assert.assertEquals("En 9:46 AM, sólo en lunes y martes", CronExpressionDescriptor.getDescription("46 9 * * 1,2", SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en domingo y sábado", CronExpressionDescriptor.getDescription("46 9 * * 0,6", SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en sábado y domingo", CronExpressionDescriptor.getDescription("46 9 * * 6,7", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en lunes y martes", CronExpressionDescriptor.getDescription("46 9 * * 1,2", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en domingo y sábado", CronExpressionDescriptor.getDescription("46 9 * * 0,6", SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en sábado y domingo", CronExpressionDescriptor.getDescription("46 9 * * 6,7", SPANISH));
     }
 
     @Test
     public void testTwiceAWeekNonZeroBased() throws Exception {
         Options options = new Options();
         options.setZeroBasedDayOfWeek(false);
-        Assert.assertEquals("En 9:46 AM, sólo en domingo y lunes", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, SPANISH));
-        Assert.assertEquals("En 9:46 AM, sólo en viernes y sábado", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en domingo y lunes", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, SPANISH));
+        Assert.assertEquals("En 9:46 a. m., sólo en viernes y sábado", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, SPANISH));
     }
 
     @Test
     public void testDayOfMonth() throws Exception {
-        Assert.assertEquals("En 12:23 PM, en el 15 día del mes", CronExpressionDescriptor.getDescription("23 12 15 * *", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., en el 15 día del mes", CronExpressionDescriptor.getDescription("23 12 15 * *", SPANISH));
     }
 
     @Test
     public void testMonthName() throws Exception {
-        Assert.assertEquals("En 12:23 PM, sólo en enero", CronExpressionDescriptor.getDescription("23 12 * JAN *", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., sólo en enero", CronExpressionDescriptor.getDescription("23 12 * JAN *", SPANISH));
     }
 
     @Test
     public void testDayOfMonthWithQuestionMark() throws Exception {
-        Assert.assertEquals("En 12:23 PM, sólo en enero", CronExpressionDescriptor.getDescription("23 12 ? JAN *", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., sólo en enero", CronExpressionDescriptor.getDescription("23 12 ? JAN *", SPANISH));
     }
 
     @Test
     public void testMonthNameRange2() throws Exception {
-        Assert.assertEquals("En 12:23 PM, enero hasta febrero", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., enero hasta febrero", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", SPANISH));
     }
 
     @Test
     public void testMonthNameRange3() throws Exception {
-        Assert.assertEquals("En 12:23 PM, enero hasta marzo", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., enero hasta marzo", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", SPANISH));
     }
 
     @Test
     public void testMonthNameRanges() throws Exception {
-        Assert.assertEquals("En 3:00 AM, sólo en enero hasta marzo y mayo hasta junio", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", SPANISH));
+        Assert.assertEquals("En 3:00 a. m., sólo en enero hasta marzo y mayo hasta junio", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", SPANISH));
     }
 
     @Test
     public void testDayOfWeekName() throws Exception {
-        Assert.assertEquals("En 12:23 PM, sólo en domingo", CronExpressionDescriptor.getDescription("23 12 * * SUN", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., sólo en domingo", CronExpressionDescriptor.getDescription("23 12 * * SUN", SPANISH));
     }
 
     @Test
     public void testDayOfWeekRange() throws Exception {
-        Assert.assertEquals("Cada 5 minutos, 3:00 PM, lunes hasta viernes", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", SPANISH));
-        Assert.assertEquals("Cada 5 minutos, 3:00 PM, domingo hasta sábado", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", SPANISH));
-        Assert.assertEquals("Cada 5 minutos, 3:00 PM, sábado hasta domingo", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", SPANISH));
+        Assert.assertEquals("Cada 5 minutos, 3:00 p. m., lunes hasta viernes", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", SPANISH));
+        Assert.assertEquals("Cada 5 minutos, 3:00 p. m., domingo hasta sábado", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", SPANISH));
+        Assert.assertEquals("Cada 5 minutos, 3:00 p. m., sábado hasta domingo", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", SPANISH));
     }
 
     @Test
     public void testDayOfWeekRanges() throws Exception {
-        Assert.assertEquals("En 3:00 AM, sólo en domingo, martes hasta jueves y sábado", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", SPANISH));
+        Assert.assertEquals("En 3:00 a. m., sólo en domingo, martes hasta jueves y sábado", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", SPANISH));
     }
 
     @Test
@@ -173,7 +172,7 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testTimeOfDayWithSeconds() throws Exception {
-        Assert.assertEquals("En 2:02:30 PM", CronExpressionDescriptor.getDescription("30 02 14 * * *", SPANISH));
+        Assert.assertEquals("En 2:02:30 p. m.", CronExpressionDescriptor.getDescription("30 02 14 * * *", SPANISH));
     }
 
     @Test
@@ -185,7 +184,7 @@ public class CronExpressionDescriptorESTest {
     @Test
     public void testSecondMinutesHoursIntervals() throws Exception {
         //TODO Flip 5 & seconds
-        Assert.assertEquals("5 segundos 10 después el minuto, desde 30 hasta el 35 minuto después de la hora, entre 10:00 AM y 12:00 PM",
+        Assert.assertEquals("5 segundos 10 después el minuto, desde 30 hasta el 35 minuto después de la hora, entre 10:00 a. m. y 12:00 p. m.",
                 CronExpressionDescriptor.getDescription("5-10 30-35 10-12 * * *", SPANISH));
     }
 
@@ -196,7 +195,7 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testMinutesPastTheHourRange() throws Exception {
-        Assert.assertEquals("30 minutos pasada la hora, entre 10:00 AM y 1:00 PM, sólo en miércoles y viernes",
+        Assert.assertEquals("30 minutos pasada la hora, entre 10:00 a. m. y 1:00 p. m., sólo en miércoles y viernes",
                 CronExpressionDescriptor.getDescription("0 30 10-13 ? * WED,FRI", SPANISH));
     }
 
@@ -207,13 +206,13 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testBetweenWithInterval() throws Exception {
-        Assert.assertEquals("Cada 3 minutos, desde 02 hasta el 59 minuto después de la hora, 1:00 AM, 9:00 AM y 10:00 PM, entre el 11 y el 26 del mes, enero hasta junio",
+        Assert.assertEquals("Cada 3 minutos, desde 02 hasta el 59 minuto después de la hora, 1:00 a. m., 9:00 a. m. y 10:00 p. m., entre el 11 y el 26 del mes, enero hasta junio",
                 CronExpressionDescriptor.getDescription("2-59/3 1,9,22 11-26 1-6 ?", SPANISH));
     }
 
     @Test
     public void testRecurringFirstOfMonth() throws Exception {
-        Assert.assertEquals("En 6:00 AM", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", SPANISH));
+        Assert.assertEquals("En 6:00 a. m.", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", SPANISH));
     }
 
     @Test
@@ -223,7 +222,7 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testEveryXMinutePastTheHourWithInterval() throws Exception {
-        Assert.assertEquals("Cada 2 minutos, desde 00 hasta el 30 minuto después de la hora, 5:00 PM, lunes hasta viernes", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", SPANISH));
+        Assert.assertEquals("Cada 2 minutos, desde 00 hasta el 30 minuto después de la hora, 5:00 p. m., lunes hasta viernes", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", SPANISH));
     }
 
     @Test
@@ -243,12 +242,12 @@ public class CronExpressionDescriptorESTest {
 
     @Test
     public void testYearRange2() throws Exception {
-        Assert.assertEquals("En 12:23 PM, enero hasta febrero, 2013 hasta 2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., enero hasta febrero, 2013 hasta 2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", SPANISH));
     }
 
     @Test
     public void testYearRange3() throws Exception {
-        Assert.assertEquals("En 12:23 PM, enero hasta marzo, 2013 hasta 2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", SPANISH));
+        Assert.assertEquals("En 12:23 p. m., enero hasta marzo, 2013 hasta 2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", SPANISH));
     }
 
     @Test
@@ -256,10 +255,8 @@ public class CronExpressionDescriptorESTest {
         Assert.assertEquals("05 y 10 minutos pasada la hora", CronExpressionDescriptor.getDescription("5,10 * * * *", SPANISH));
         Assert.assertEquals("05 y 10 minutos pasada la hora, en el 2 día del mes", CronExpressionDescriptor.getDescription("5,10 * 2 * *", SPANISH));
         Assert.assertEquals("Cada 10 minutos, en el 2 día del mes", CronExpressionDescriptor.getDescription("5/10 * 2 * *", SPANISH));
-
         Assert.assertEquals("5 y 6 segundos después el minuto", CronExpressionDescriptor.getDescription("5,6 * * * * *", SPANISH));
-        Assert.assertEquals("5 y 6 segundos después el minuto, 1:00 AM", CronExpressionDescriptor.getDescription("5,6 * 1 * * *", SPANISH));
+        Assert.assertEquals("5 y 6 segundos después el minuto, 1:00 a. m.", CronExpressionDescriptor.getDescription("5,6 * 1 * * *", SPANISH));
         Assert.assertEquals("5 y 6 segundos después el minuto, en el 2 día del mes", CronExpressionDescriptor.getDescription("5,6 * * 2 * *", SPANISH));
     }
-
 }
