@@ -1,13 +1,12 @@
 package net.redhogs.cronparser;
 
 import java.util.Locale;
-
 import org.junit.Assert;
 import org.junit.Test;
 
 public class CronExpressionDescriptorROTest {
 
-	private static final Locale ROMANIAN = new Locale("ro");
+    private static final Locale ROMANIAN = Locale.of("ro");
 
     @Test
     public void testEverySecond() throws Exception {
@@ -21,7 +20,7 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testMinuteSpan() throws Exception {
-        Assert.assertEquals("În fiecare minut între 11:00 AM și 11:10 AM", CronExpressionDescriptor.getDescription("0-10 11 * * *", ROMANIAN));
+        Assert.assertEquals("În fiecare minut între 11:00 a.m. și 11:10 a.m.", CronExpressionDescriptor.getDescription("0-10 11 * * *", ROMANIAN));
     }
 
     @Test
@@ -46,13 +45,13 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testDailyAtTime() throws Exception {
-        Assert.assertEquals("La 11:30 AM", CronExpressionDescriptor.getDescription("30 11 * * *", ROMANIAN));
+        Assert.assertEquals("La 11:30 a.m.", CronExpressionDescriptor.getDescription("30 11 * * *", ROMANIAN));
     }
 
     @Test
     public void testTimeOfDayCertainDaysOfWeek() throws Exception {
-        Assert.assertEquals("La 11:00 PM, de luni până vineri", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", ROMANIAN));
-        Assert.assertEquals("La 11:30 AM, de luni până vineri", CronExpressionDescriptor.getDescription("30 11 * * 1-5", ROMANIAN));
+        Assert.assertEquals("La 11:00 p.m., de luni până vineri", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", ROMANIAN));
+        Assert.assertEquals("La 11:30 a.m., de luni până vineri", CronExpressionDescriptor.getDescription("30 11 * * 1-5", ROMANIAN));
     }
 
     @Test
@@ -67,90 +66,90 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testTwoTimesEachAfternoon() throws Exception {
-        Assert.assertEquals("La 2:30 PM și 4:30 PM", CronExpressionDescriptor.getDescription("30 14,16 * * *", ROMANIAN));
+        Assert.assertEquals("La 2:30 p.m. și 4:30 p.m.", CronExpressionDescriptor.getDescription("30 14,16 * * *", ROMANIAN));
     }
 
     @Test
     public void testThreeTimesDaily() throws Exception {
-        Assert.assertEquals("La 6:30 AM, 2:30 PM și 4:30 PM", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", ROMANIAN));
+        Assert.assertEquals("La 6:30 a.m., 2:30 p.m. și 4:30 p.m.", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", ROMANIAN));
     }
 
     @Test
     public void testOnceAWeek() throws Exception {
-        Assert.assertEquals("La 9:46 AM, numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 0", ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 7", ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai luni", CronExpressionDescriptor.getDescription("46 9 * * 1", ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 6", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 0", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 7", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai luni", CronExpressionDescriptor.getDescription("46 9 * * 1", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 6", ROMANIAN));
     }
 
     @Test
     public void testOnceAWeekNonZeroBased() throws Exception {
         Options options = new Options();
         options.setZeroBasedDayOfWeek(false);
-        Assert.assertEquals("La 9:46 AM, numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 1", options, ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai luni", CronExpressionDescriptor.getDescription("46 9 * * 2", options, ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 7", options, ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai duminică", CronExpressionDescriptor.getDescription("46 9 * * 1", options, ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai luni", CronExpressionDescriptor.getDescription("46 9 * * 2", options, ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 7", options, ROMANIAN));
     }
 
     @Test
     public void testTwiceAWeek() throws Exception {
-        Assert.assertEquals("La 9:46 AM, numai duminică și sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 0,6", ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai sâmbătă și duminică", CronExpressionDescriptor.getDescription("46 9 * * 6,7", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai duminică și sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 0,6", ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai sâmbătă și duminică", CronExpressionDescriptor.getDescription("46 9 * * 6,7", ROMANIAN));
     }
 
     @Test
     public void testTwiceAWeekNonZeroBased() throws Exception {
         Options options = new Options();
         options.setZeroBasedDayOfWeek(false);
-        Assert.assertEquals("La 9:46 AM, numai duminică și luni", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, ROMANIAN));
-        Assert.assertEquals("La 9:46 AM, numai vineri și sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai duminică și luni", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, ROMANIAN));
+        Assert.assertEquals("La 9:46 a.m., numai vineri și sâmbătă", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, ROMANIAN));
     }
 
     @Test
     public void testDayOfMonth() throws Exception {
-        Assert.assertEquals("La 12:23 PM, în a 15-a zi a lunii", CronExpressionDescriptor.getDescription("23 12 15 * *", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., în a 15-a zi a lunii", CronExpressionDescriptor.getDescription("23 12 15 * *", ROMANIAN));
     }
 
     @Test
     public void testMonthName() throws Exception {
-        Assert.assertEquals("La 12:23 PM, numai în ianuarie", CronExpressionDescriptor.getDescription("23 12 * JAN *", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., numai în ianuarie", CronExpressionDescriptor.getDescription("23 12 * JAN *", ROMANIAN));
     }
 
     @Test
     public void testDayOfMonthWithQuestionMark() throws Exception {
-        Assert.assertEquals("La 12:23 PM, numai în ianuarie", CronExpressionDescriptor.getDescription("23 12 ? JAN *", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., numai în ianuarie", CronExpressionDescriptor.getDescription("23 12 ? JAN *", ROMANIAN));
     }
 
     @Test
     public void testMonthNameRange2() throws Exception {
-        Assert.assertEquals("La 12:23 PM, din ianuarie până în februarie", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., din ianuarie până în februarie", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", ROMANIAN));
     }
 
     @Test
     public void testMonthNameRange3() throws Exception {
-        Assert.assertEquals("La 12:23 PM, din ianuarie până în martie", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., din ianuarie până în martie", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", ROMANIAN));
     }
 
     @Test
     public void testMonthNameRanges() throws Exception {
-        Assert.assertEquals("La 3:00 AM, numai în din ianuarie până în martie și din mai până în iunie", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", ROMANIAN));
+        Assert.assertEquals("La 3:00 a.m., numai în din ianuarie până în martie și din mai până în iunie", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", ROMANIAN));
     }
 
     @Test
     public void testDayOfWeekName() throws Exception {
-        Assert.assertEquals("La 12:23 PM, numai duminică", CronExpressionDescriptor.getDescription("23 12 * * SUN", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., numai duminică", CronExpressionDescriptor.getDescription("23 12 * * SUN", ROMANIAN));
     }
 
     @Test
     public void testDayOfWeekRange() throws Exception {
-        Assert.assertEquals("La fiecare 5 minute, la 3:00 PM, de luni până vineri", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", ROMANIAN));
-        Assert.assertEquals("La fiecare 5 minute, la 3:00 PM, de duminică până sâmbătă", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", ROMANIAN));
-        Assert.assertEquals("La fiecare 5 minute, la 3:00 PM, de sâmbătă până duminică", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", ROMANIAN));
+        Assert.assertEquals("La fiecare 5 minute, la 3:00 p.m., de luni până vineri", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", ROMANIAN));
+        Assert.assertEquals("La fiecare 5 minute, la 3:00 p.m., de duminică până sâmbătă", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", ROMANIAN));
+        Assert.assertEquals("La fiecare 5 minute, la 3:00 p.m., de sâmbătă până duminică", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", ROMANIAN));
     }
 
     @Test
     public void testDayOfWeekRanges() throws Exception {
-        Assert.assertEquals("La 3:00 AM, numai duminică, de marţi până joi și sâmbătă", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", ROMANIAN));
+        Assert.assertEquals("La 3:00 a.m., numai duminică, de marți până joi și sâmbătă", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", ROMANIAN));
     }
 
     @Test
@@ -172,7 +171,7 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testTimeOfDayWithSeconds() throws Exception {
-        Assert.assertEquals("La 2:02:30 PM", CronExpressionDescriptor.getDescription("30 02 14 * * *", ROMANIAN));
+        Assert.assertEquals("La 2:02:30 p.m.", CronExpressionDescriptor.getDescription("30 02 14 * * *", ROMANIAN));
     }
 
     @Test
@@ -182,7 +181,7 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testSecondMinutesHoursIntervals() throws Exception {
-        Assert.assertEquals("Între secundele 5 și 10, între minutele 30 și 35, între 10:00 AM și 12:00 PM",
+        Assert.assertEquals("Între secundele 5 și 10, între minutele 30 și 35, între 10:00 a.m. și 12:00 p.m.",
                 CronExpressionDescriptor.getDescription("5-10 30-35 10-12 * * *", ROMANIAN));
     }
 
@@ -193,7 +192,7 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testMinutesPastTheHourRange() throws Exception {
-        Assert.assertEquals("La 30 minute în fiecare oră, între 10:00 AM și 1:00 PM, numai miercuri și vineri",
+        Assert.assertEquals("La 30 minute în fiecare oră, între 10:00 a.m. și 1:00 p.m., numai miercuri și vineri",
                 CronExpressionDescriptor.getDescription("0 30 10-13 ? * WED,FRI", ROMANIAN));
     }
 
@@ -204,13 +203,13 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testBetweenWithInterval() throws Exception {
-        Assert.assertEquals("La fiecare 3 minute, între minutele 02 și 59, la 1:00 AM, 9:00 AM și 10:00 PM, între a 11-a și a 26-a zi a lunii, din ianuarie până în iunie",
+        Assert.assertEquals("La fiecare 3 minute, între minutele 02 și 59, la 1:00 a.m., 9:00 a.m. și 10:00 p.m., între a 11-a și a 26-a zi a lunii, din ianuarie până în iunie",
                 CronExpressionDescriptor.getDescription("2-59/3 1,9,22 11-26 1-6 ?", ROMANIAN));
     }
 
     @Test
     public void testRecurringFirstOfMonth() throws Exception {
-        Assert.assertEquals("La 6:00 AM", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", ROMANIAN));
+        Assert.assertEquals("La 6:00 a.m.", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", ROMANIAN));
     }
 
     @Test
@@ -231,7 +230,7 @@ public class CronExpressionDescriptorROTest {
      */
     @Test
     public void testEveryXMinutePastTheHourWithInterval() throws Exception {
-        Assert.assertEquals("La fiecare 2 minute, între minutele 00 și 30, la 5:00 PM, de luni până vineri", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", ROMANIAN));
+        Assert.assertEquals("La fiecare 2 minute, între minutele 00 și 30, la 5:00 p.m., de luni până vineri", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", ROMANIAN));
     }
 
     /**
@@ -254,12 +253,12 @@ public class CronExpressionDescriptorROTest {
 
     @Test
     public void testYearRange2() throws Exception {
-        Assert.assertEquals("La 12:23 PM, din ianuarie până în februarie, din 2013 până în 2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., din ianuarie până în februarie, din 2013 până în 2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", ROMANIAN));
     }
 
     @Test
     public void testYearRange3() throws Exception {
-        Assert.assertEquals("La 12:23 PM, din ianuarie până în martie, din 2013 până în 2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", ROMANIAN));
+        Assert.assertEquals("La 12:23 p.m., din ianuarie până în martie, din 2013 până în 2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", ROMANIAN));
     }
 
     @Test
@@ -267,10 +266,8 @@ public class CronExpressionDescriptorROTest {
         Assert.assertEquals("La 05 și 10 minute în fiecare oră", CronExpressionDescriptor.getDescription("5,10 * * * *", ROMANIAN));
         Assert.assertEquals("La 05 și 10 minute în fiecare oră, în a 2-a zi a lunii", CronExpressionDescriptor.getDescription("5,10 * 2 * *", ROMANIAN));
         Assert.assertEquals("La fiecare 10 minute, în a 2-a zi a lunii", CronExpressionDescriptor.getDescription("5/10 * 2 * *", ROMANIAN));
-
         Assert.assertEquals("La secunda 5 și 6", CronExpressionDescriptor.getDescription("5,6 * * * * *", ROMANIAN));
-        Assert.assertEquals("La secunda 5 și 6, la 1:00 AM", CronExpressionDescriptor.getDescription("5,6 * 1 * * *", ROMANIAN));
+        Assert.assertEquals("La secunda 5 și 6, la 1:00 a.m.", CronExpressionDescriptor.getDescription("5,6 * 1 * * *", ROMANIAN));
         Assert.assertEquals("La secunda 5 și 6, în a 2-a zi a lunii", CronExpressionDescriptor.getDescription("5,6 * * 2 * *", ROMANIAN));
     }
-
 }
