@@ -1,21 +1,23 @@
 package net.redhogs.cronparser;
 
+import java.util.Locale;
 import org.junit.Assert;
 import org.junit.Test;
-
-import java.util.Locale;
 
 /**
  * @author vitctor wang
  * @since 02 SEP 2017 18:28:13
  */
 public class CronExpressionDescriptorZHTest {
-    private static final Locale CHINESE = new Locale("zh");
+
+    private static final Locale CHINESE = Locale.of("zh");
     private static final Options options = new Options();
 
     static {
         options.setTwentyFourHourTime(true);
-        /** Chinese, Japanese, Korean and other East Asian languages have no spaces between words */
+        /**
+         * Chinese, Japanese, Korean and other East Asian languages have no spaces between words
+         */
         options.setNeedSpaceBetweenWords(false);
     }
 
@@ -33,9 +35,9 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testMinuteSpan() throws Exception {
-        Assert.assertEquals("在上午11:00和上午11:10之间的每分钟", CronExpressionDescriptor.getDescription("0-10 11 * * *", options, CHINESE));
-        Assert.assertEquals("每分钟, 在上午1:00", CronExpressionDescriptor.getDescription("* 1 * * *", options, CHINESE));
-        Assert.assertEquals("每分钟, 在上午12:00", CronExpressionDescriptor.getDescription("* 0 * * *", options, CHINESE));
+        Assert.assertEquals("在11:00和11:10之间的每分钟", CronExpressionDescriptor.getDescription("0-10 11 * * *", options, CHINESE));
+        Assert.assertEquals("每分钟, 在01:00", CronExpressionDescriptor.getDescription("* 1 * * *", options, CHINESE));
+        Assert.assertEquals("每分钟, 在00:00", CronExpressionDescriptor.getDescription("* 0 * * *", options, CHINESE));
     }
 
     @Test
@@ -61,15 +63,15 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testDailyAtTime() throws Exception {
-        Assert.assertEquals("在上午11:30", CronExpressionDescriptor.getDescription("30 11 * * *", options, CHINESE));
-        Assert.assertEquals("在上午11:00", CronExpressionDescriptor.getDescription("0 11 * * *", options, CHINESE));
+        Assert.assertEquals("在11:30", CronExpressionDescriptor.getDescription("30 11 * * *", options, CHINESE));
+        Assert.assertEquals("在11:00", CronExpressionDescriptor.getDescription("0 11 * * *", options, CHINESE));
     }
 
     @Test
     public void testTimeOfDayCertainDaysOfWeek() throws Exception {
-        Assert.assertEquals("在下午11:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", options, CHINESE));
-        Assert.assertEquals("在下午11:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", options, CHINESE));
-        Assert.assertEquals("在上午11:30, 星期一到星期五", CronExpressionDescriptor.getDescription("30 11 * * 1-5", options, CHINESE));
+        Assert.assertEquals("在23:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", options, CHINESE));
+        Assert.assertEquals("在23:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 23 ? * MON-FRI", options, CHINESE));
+        Assert.assertEquals("在11:30, 星期一到星期五", CronExpressionDescriptor.getDescription("30 11 * * 1-5", options, CHINESE));
     }
 
     @Test
@@ -84,20 +86,20 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testTwoTimesEachAfternoon() throws Exception {
-        Assert.assertEquals("在下午2:30和下午4:30", CronExpressionDescriptor.getDescription("30 14,16 * * *", options, CHINESE));
+        Assert.assertEquals("在14:30和16:30", CronExpressionDescriptor.getDescription("30 14,16 * * *", options, CHINESE));
     }
 
     @Test
     public void testThreeTimesDaily() throws Exception {
-        Assert.assertEquals("在上午6:30,下午2:30和下午4:30", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", options, CHINESE));
+        Assert.assertEquals("在06:30,14:30和16:30", CronExpressionDescriptor.getDescription("30 6,14,16 * * *", options, CHINESE));
     }
 
     @Test
     public void testOnceAWeek() throws Exception {
-        Assert.assertEquals("在上午9:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 0", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 7", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期一", CronExpressionDescriptor.getDescription("46 9 * * 1", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期六", CronExpressionDescriptor.getDescription("46 9 * * 6", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 0", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 7", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期一", CronExpressionDescriptor.getDescription("46 9 * * 1", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期六", CronExpressionDescriptor.getDescription("46 9 * * 6", options, CHINESE));
     }
 
     @Test
@@ -106,16 +108,16 @@ public class CronExpressionDescriptorZHTest {
         options.setZeroBasedDayOfWeek(false);
         options.setNeedSpaceBetweenWords(false);
         options.setTwentyFourHourTime(true);
-        Assert.assertEquals("在上午9:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 1", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期一", CronExpressionDescriptor.getDescription("46 9 * * 2", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期六", CronExpressionDescriptor.getDescription("46 9 * * 7", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期日", CronExpressionDescriptor.getDescription("46 9 * * 1", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期一", CronExpressionDescriptor.getDescription("46 9 * * 2", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期六", CronExpressionDescriptor.getDescription("46 9 * * 7", options, CHINESE));
     }
 
     @Test
     public void testTwiceAWeek() throws Exception {
-        Assert.assertEquals("在上午9:46, 仅在星期一和星期二", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期日和星期六", CronExpressionDescriptor.getDescription("46 9 * * 0,6", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期六和星期日", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期一和星期二", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期日和星期六", CronExpressionDescriptor.getDescription("46 9 * * 0,6", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期六和星期日", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, CHINESE));
     }
 
     @Test
@@ -124,55 +126,55 @@ public class CronExpressionDescriptorZHTest {
         options.setZeroBasedDayOfWeek(false);
         options.setTwentyFourHourTime(true);
         options.setNeedSpaceBetweenWords(false);
-        Assert.assertEquals("在上午9:46, 仅在星期日和星期一", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, CHINESE));
-        Assert.assertEquals("在上午9:46, 仅在星期五和星期六", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期日和星期一", CronExpressionDescriptor.getDescription("46 9 * * 1,2", options, CHINESE));
+        Assert.assertEquals("在09:46, 仅在星期五和星期六", CronExpressionDescriptor.getDescription("46 9 * * 6,7", options, CHINESE));
     }
 
     @Test
     public void testDayOfMonth() throws Exception {
-        Assert.assertEquals("在下午12:23, 在当月的15日", CronExpressionDescriptor.getDescription("23 12 15 * *", options, CHINESE));
+        Assert.assertEquals("在12:23, 在当月的15日", CronExpressionDescriptor.getDescription("23 12 15 * *", options, CHINESE));
     }
 
     @Test
     public void testMonthName() throws Exception {
-        Assert.assertEquals("在下午12:23, 仅在一月", CronExpressionDescriptor.getDescription("23 12 * JAN *", options, CHINESE));
+        Assert.assertEquals("在12:23, 仅在一月", CronExpressionDescriptor.getDescription("23 12 * JAN *", options, CHINESE));
     }
 
     @Test
     public void testDayOfMonthWithQuestionMark() throws Exception {
-        Assert.assertEquals("在下午12:23, 仅在一月", CronExpressionDescriptor.getDescription("23 12 ? JAN *", options, CHINESE));
+        Assert.assertEquals("在12:23, 仅在一月", CronExpressionDescriptor.getDescription("23 12 ? JAN *", options, CHINESE));
     }
 
     @Test
     public void testMonthNameRange2() throws Exception {
-        Assert.assertEquals("在下午12:23, 一月到二月", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", options, CHINESE));
+        Assert.assertEquals("在12:23, 一月到二月", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB *", options, CHINESE));
     }
 
     @Test
     public void testMonthNameRange3() throws Exception {
-        Assert.assertEquals("在下午12:23, 一月到三月", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", options, CHINESE));
+        Assert.assertEquals("在12:23, 一月到三月", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR *", options, CHINESE));
     }
 
     @Test
     public void testMonthNameRanges() throws Exception {
-        Assert.assertEquals("在上午3:00, 仅在一月到三月和五月到六月", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", options, CHINESE));
+        Assert.assertEquals("在03:00, 仅在一月到三月和五月到六月", CronExpressionDescriptor.getDescription("0 0 3 * 1-3,5-6 *", options, CHINESE));
     }
 
     @Test
     public void testDayOfWeekName() throws Exception {
-        Assert.assertEquals("在下午12:23, 仅在星期日", CronExpressionDescriptor.getDescription("23 12 * * SUN", options, CHINESE));
+        Assert.assertEquals("在12:23, 仅在星期日", CronExpressionDescriptor.getDescription("23 12 * * SUN", options, CHINESE));
     }
 
     @Test
     public void testDayOfWeekRange() throws Exception {
-        Assert.assertEquals("每5分钟, 在下午3:00, 星期一到星期五", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", options, CHINESE));
-        Assert.assertEquals("每5分钟, 在下午3:00, 星期日到星期六", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", options, CHINESE));
-        Assert.assertEquals("每5分钟, 在下午3:00, 星期六到星期日", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", options, CHINESE));
+        Assert.assertEquals("每5分钟, 在15:00, 星期一到星期五", CronExpressionDescriptor.getDescription("*/5 15 * * MON-FRI", options, CHINESE));
+        Assert.assertEquals("每5分钟, 在15:00, 星期日到星期六", CronExpressionDescriptor.getDescription("*/5 15 * * 0-6", options, CHINESE));
+        Assert.assertEquals("每5分钟, 在15:00, 星期六到星期日", CronExpressionDescriptor.getDescription("*/5 15 * * 6-7", options, CHINESE));
     }
 
     @Test
     public void testDayOfWeekRanges() throws Exception {
-        Assert.assertEquals("在上午3:00, 仅在星期日, 星期二到星期四和星期六", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", options, CHINESE));
+        Assert.assertEquals("在03:00, 仅在星期日, 星期二到星期四和星期六", CronExpressionDescriptor.getDescription("0 0 3 * * 0,2-4,6", options, CHINESE));
     }
 
     @Test
@@ -204,8 +206,7 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testSecondMinutesHoursIntervals() throws Exception {
-        Assert.assertEquals("过整分钟后5到10秒, 过整点后30到35分, 在上午10:00和下午12:00之间",
-                CronExpressionDescriptor.getDescription("5-10 30-35 10-12 * * *", options, CHINESE));
+        Assert.assertEquals("过整分钟后5到10秒, 过整点后30到35分, 在10:00和12:00之间", CronExpressionDescriptor.getDescription("5-10 30-35 10-12 * * *", options, CHINESE));
     }
 
     @Test
@@ -215,8 +216,7 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testMinutesPastTheHourRange() throws Exception {
-        Assert.assertEquals("在30分钟，过整点后, 在上午10:00和下午1:00之间, 仅在星期三和星期五",
-                CronExpressionDescriptor.getDescription("0 30 10-13 ? * WED,FRI", options, CHINESE));
+        Assert.assertEquals("在30分钟，过整点后, 在10:00和13:00之间, 仅在星期三和星期五", CronExpressionDescriptor.getDescription("0 30 10-13 ? * WED,FRI", options, CHINESE));
     }
 
     @Test
@@ -226,13 +226,12 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testBetweenWithInterval() throws Exception {
-        Assert.assertEquals("每3分钟, 过整点后02到59分, 在上午1:00, 上午9:00和下午10:00, 在当月的11日和26日之间的每天, 一月到六月",
-                CronExpressionDescriptor.getDescription("2-59/3 1,9,22 11-26 1-6 ?", options, CHINESE));
+        Assert.assertEquals("每3分钟, 过整点后02到59分, 在01:00, 09:00和22:00, 在当月的11日和26日之间的每天, 一月到六月", CronExpressionDescriptor.getDescription("2-59/3 1,9,22 11-26 1-6 ?", options, CHINESE));
     }
 
     @Test
     public void testRecurringFirstOfMonth() throws Exception {
-        Assert.assertEquals("在上午6:00", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", options, CHINESE));
+        Assert.assertEquals("在06:00", CronExpressionDescriptor.getDescription("0 0 6 1/1 * ?", options, CHINESE));
     }
 
     @Test
@@ -253,7 +252,7 @@ public class CronExpressionDescriptorZHTest {
      */
     @Test
     public void testEveryXMinutePastTheHourWithInterval() throws Exception {
-        Assert.assertEquals("每2分钟, 过整点后00到30分, 在下午5:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", options, CHINESE));
+        Assert.assertEquals("每2分钟, 过整点后00到30分, 在17:00, 星期一到星期五", CronExpressionDescriptor.getDescription("0 0-30/2 17 ? * MON-FRI", options, CHINESE));
     }
 
     /**
@@ -276,24 +275,22 @@ public class CronExpressionDescriptorZHTest {
 
     @Test
     public void testYearRange2() throws Exception {
-        Assert.assertEquals("在下午12:23, 一月到二月, 2013到2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", options, CHINESE));
+        Assert.assertEquals("在12:23, 一月到二月, 2013到2014", CronExpressionDescriptor.getDescription("23 12 * JAN-FEB * 2013-2014", options, CHINESE));
     }
 
     @Test
     public void testYearRange3() throws Exception {
-        Assert.assertEquals("在下午12:23, 一月到三月, 2013到2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", options, CHINESE));
+        Assert.assertEquals("在12:23, 一月到三月, 2013到2015", CronExpressionDescriptor.getDescription("23 12 * JAN-MAR * 2013-2015", options, CHINESE));
     }
 
     @Test
     public void testIssue26() throws Exception {
         Assert.assertEquals("在05和10分钟，过整点后", CronExpressionDescriptor.getDescription("5,10 * * * *", options, CHINESE));
-        Assert.assertEquals("在05和10分钟，过整点后, 在上午12:00", CronExpressionDescriptor.getDescription("5,10 0 * * *", options, CHINESE));
+        Assert.assertEquals("在05和10分钟，过整点后, 在00:00", CronExpressionDescriptor.getDescription("5,10 0 * * *", options, CHINESE));
         Assert.assertEquals("在05和10分钟，过整点后, 在当月的2日", CronExpressionDescriptor.getDescription("5,10 * 2 * *", options, CHINESE));
         Assert.assertEquals("每10分钟, 在当月的2日", CronExpressionDescriptor.getDescription("5/10 * 2 * *", options, CHINESE));
-
         Assert.assertEquals("过整分后第5和6秒", CronExpressionDescriptor.getDescription("5,6 0 * * * *", options, CHINESE));
-        Assert.assertEquals("过整分后第5和6秒, 在上午1:00", CronExpressionDescriptor.getDescription("5,6 0 1 * * *", options, CHINESE));
+        Assert.assertEquals("过整分后第5和6秒, 在01:00", CronExpressionDescriptor.getDescription("5,6 0 1 * * *", options, CHINESE));
         Assert.assertEquals("过整分后第5和6秒, 在当月的2日", CronExpressionDescriptor.getDescription("5,6 0 * 2 * *", options, CHINESE));
     }
-
 }
